Fix spacing below download button

--- a/app/assets/stylesheets/modules/_accessrestrict_notice.scss
+++ b/app/assets/stylesheets/modules/_accessrestrict_notice.scss
@@ -10,6 +10,7 @@
     background-color: #fdf1f1;
     border: none;
     border-left: 1rem solid #f19b99;
+    margin-top: 1.5rem;
 }
 
 #restrictionsModal h1 {
@@ -20,4 +21,5 @@
     background-color: #FCECBD;
     border: none;
     border-left: 1rem solid #8B640E;
+    margin-top: 1.5rem;
 }
